Fix for text legibility on some system/resolutions (but impacts all)

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -25,7 +25,6 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol';
-  font-weight: 200;
   color: #444;
   padding: 0;
   margin: 0;
