--- a/src/css/suspended.css
+++ b/src/css/suspended.css
@@ -32,7 +32,6 @@ body {
     font-size: 1.5rem;
     line-height: 1.5em;
     background: #fafafa;
-    font-weight: 300;
     color: #444;
 }
 h1 {
